crates/bijux-domain-bam/tests/snapshots/stage_contract_snapshots__stage_contract__bam_recalibration.snap
---
source: crates/bijux-domain-bam/tests/stage_contract_snapshots.rs
expression: json
---
{
  "audit_artifacts": [
    {
      "filename": "recal.bam",
      "name": "recal_bam"
    },
    {
      "filename": "recal.bam.bai",
      "name": "recal_bai"
    },
    {
      "filename": "recal.report.txt",
      "name": "recal_report"
    },
    {
      "filename": "recal.summary.json",
      "name": "summary"
    },
    {
      "filename": "stage.metrics.json",
      "name": "stage_metrics"
    }
  ],
  "inputs": [
    "bam"
  ],
  "io": {
    "deterministic": true,
    "duplicate_policy": "preserves_duplicates",
    "emits_bam": true,
    "emits_report": true,
    "indexing": "requires_index_and_produces_index",
    "input_kind": "Bam",
    "mapping_quality_policy": "no_mapping_quality_filter",
    "nondeterminism_reason": null,
    "output_kind": "Bam",
    "read_group_policy": "preserves_read_groups",
    "sorting": "requires_coordinate_sorted_input"
  },
  "outputs": [
    "recal_bam",
    "recal_bai",
    "recal_report",
    "summary",
    "stage_metrics"
  ],
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "bam.recalibration",
  "tool_ids": [
    "gatk"
  ]
}
